[package]
name = "retrvid"
version = "0.1.0"
edition = "2021"
authors = ["Sujal Bolia <sujalbolia@gmail.com>"]
license = "MIT/Apache-2.0"
description = "retrvid (rid) lets you store and retrieve ids with a lookup name"
homepage = "https://github.com/nextonesfaster/retrvid"
repository = "https://github.com/nextonesfaster/retrvid"
keywords = ["id", "id-manager", "retrieve-id"]
categories = ["command-line-utilities"]

[[bin]]
name = "rid"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0.0"
toml = "0.5.9"
arboard = { version = "2.1.1", default-features = false }
itertools = "0.10.3"

[dependencies.clap]
version = "3.0.15"
features = ["derive", "cargo", "wrap_help"]
